--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.1.2",
-    "expo": "~49.0.7",
+    "@react-native-async-storage/async-storage": "^1.19.2",
+    "expo": "^48.0.20",
     "expo-status-bar": "~1.6.0",
+    "mobx-state-tree": "^5.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
