feat: user can loggin

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-web": "~0.19.6",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "tailwind-react-native-classnames": "^1.5.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/uuid": "^9.0.2",
     "typescript": "^5.1.3"
   },
   "private": true
