--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.1.2",
+    "@expo/config": "~8.0.0",
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "expo": "^48.0.20",
+    "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.6.0",
+    "http-proxy-middleware": "^2.0.6",
     "mobx-state-tree": "^5.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "^18.1.2",
     "@types/react": "~18.0.14",
     "@types/uuid": "^9.0.2",
     "typescript": "^5.1.3"
