--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "dotenv": "^16.3.1",
     "expo": "^48.0.20",
     "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.6.0",
     "http-proxy-middleware": "^2.0.6",
+    "mobx": "^6.10.0",
     "mobx-state-tree": "^5.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-native-web": "~0.19.6",
     "tailwind-react-native-classnames": "^1.5.1",
     "uuid": "^9.0.0"
