--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-svg": "^13.13.0",
     "react-native-web": "~0.19.6",
     "tailwind-react-native-classnames": "^1.5.1",
     "uuid": "^9.0.0"
