--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-svg": "^13.13.0",
     "react-native-web": "~0.19.6",
     "tailwind-react-native-classnames": "^1.5.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "expo-av": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
