--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "expo": "^48.0.20",
+    "expo-av": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.6.0",
@@ -25,14 +26,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.13.0",
     "react-native-web": "~0.19.6",
     "tailwind-react-native-classnames": "^1.5.1",
-    "uuid": "^9.0.0",
-    "expo-av": "~13.2.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
