--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\""
   },
   "dependencies": {
     "@expo/config": "~8.0.0",
@@ -23,6 +24,7 @@
     "http-proxy-middleware": "^2.0.6",
     "mobx": "^6.10.0",
     "mobx-state-tree": "^5.1.8",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
