--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --web",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
     "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\""
   },
   "dependencies": {
     "@expo/config": "~8.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
@@ -20,20 +19,20 @@
     "expo-av": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
-    "expo-status-bar": "~1.6.0",
+    "expo-status-bar": "~1.4.4",
     "http-proxy-middleware": "^2.0.6",
     "mobx": "^6.10.0",
     "mobx-state-tree": "^5.1.8",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
-    "react-native-reanimated": "^3.4.2",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
-    "react-native-svg": "^13.13.0",
-    "react-native-web": "~0.19.6",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10",
     "tailwind-react-native-classnames": "^1.5.1",
     "uuid": "^9.0.0"
   },
@@ -42,7 +41,7 @@
     "@expo/webpack-config": "^18.1.2",
     "@types/react": "~18.0.14",
     "@types/uuid": "^9.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
